--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -2,17 +2,21 @@
 :root {
   // --app-color-white: #ffffff;
   --app-color-white-soft: #f8f8f8;
-  // --app-color-white-mute: #f2f2f2;
+  --app-color-white-mute: #d1d1d1;
 
   // --app-color-black: #181818;
   --app-color-black-soft: #222222;
-  // --app-color-black-mute: #282828;
+  --app-color-black-mute: #3f3f3f;
 
   --app-color-indigo: lch(10% 9 260);
   --app-color-indigo-veiled: lch(20% 8 260);
 
-  --app-color-ocre: lch(50% 200 85);
+  --app-color-ocre: lch(60% 200 85);
   --app-color-ocre-veiled: lch(20% 8 85);
+
+  --app-color-red: lch(20% 70 30);
+
+  --app-color-green: lch(50% 70 140);
 
   // --app-color-divider-light-1: rgba(60, 60, 60, 0.29);
   // --app-color-divider-light-2: rgba(60, 60, 60, 0.12);
@@ -25,7 +29,7 @@
   // --app-color-text-dark-2: rgba(235, 235, 235, 0.64);
 
   --color-text: var(--app-color-white-soft);
-  --color-background: var(--app-color-indigo)
+  --color-background: var(--app-color-indigo);
 }
 
 *,
@@ -42,7 +46,7 @@ body {
   color: var(--color-text);
   background: var(--color-background);
 
-  transition: 
+  transition:
     color 0.5s,
     background-color 0.5s;
 
@@ -79,4 +83,4 @@ body {
   margin: 0 auto;
 }
 
-@import "contest";
+@import 'contest';
