Hide answers when HalfJoker is used

--- a/src/assets/_contest.scss
+++ b/src/assets/_contest.scss
@@ -76,6 +76,10 @@ $decoration-line-border-weight: 2px;
     @extend %contest-box-error;
   }
 
+  &.hidden {
+    visibility: hidden;
+  }
+
   .answer-id {
     color: var(--app-color-ocre);
   }
