Jokers used shown in summary

--- a/src/assets/_contest.scss
+++ b/src/assets/_contest.scss
@@ -143,8 +143,11 @@ $decoration-line-border-weight: 2px;
 
 .c-question-summary-item {
   @extend %contest-box;
-  text-align: center;
-  padding: 0.33em 0.66em;
+  display: flex;
+  gap: .5em;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.33em 1.5em;
   cursor: pointer;
 
   &:hover {
@@ -162,6 +165,11 @@ $decoration-line-border-weight: 2px;
   &.current {
     @extend %contest-box-selected;
     background-color: var(--app-color-ocre);
+  }
+
+  > .jokers {
+    display: flex;
+    gap: .5em;
   }
 }
 
