--- a/src/assets/_contest.scss
+++ b/src/assets/_contest.scss
@@ -181,6 +181,8 @@ $decoration-line-border-weight: 2px;
   font-size: 0.8em;
 
   max-width: 20em;
+  height: 100%;
+  overflow: auto;
 }
 
 .c-joker {
