--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -80,7 +80,7 @@ body {
     min-height: 100dvh;
 
     display: grid;
-    grid-template-rows: min-content 1fr min-content;
+    grid-template-rows: min-content 1fr min-content min-content;
   }
 }
 
